[package]
name = "quickjs_wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.quickrs]
git = "https://github.com/buypal/quickrs"
default-features = false
features = ["exports", "loader"]

